# arctos-ros2

./: .gitignore  README.md  README.me  README_GIT.me  README_action.me  README_controller.me  frames_2025-11-04_21.57.48.gv  intel_rgbd_cam_d435.urdf.xacro  verify.md
.github/: copilot-instructions.md
arctos_bringup/: CMakeLists.txt  README.md  package.xml
arctos_bringup/config/: commander.rviz  initial_positions.yaml  moveit.rviz  real_controllers.yaml  real_controllers.yaml.bak  ros2_controllers.yaml
arctos_bringup/launch/: arctos.launch.py  description.launch.py  gazebo.launch.py.bak  home.launch.py  moveit_no_rviz.launch.py  my_moveit.launch.py  my_moveit.launch.xml  my_moveit_fixed.launch.py  real_robot.launch.py  ros2_control.launch.py  sim_robot.launch.py
arctos_bringup/scripts/: gripper_joint_publisher.py  mtc_safety_check.py  realbot.sh
arctos_bringup/src/: auto_home_client.cpp
arctos_commander_cpp/: CMakeLists.txt  package.xml
arctos_commander_cpp/src/: commander_template.cpp  test_moveit.cpp
arctos_description/: CMakeLists.txt  README.md  model.config  package.xml
arctos_description/config/: arctos.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_planners.yaml  ros2_controllers.yaml
arctos_description/launch/: display.launch.py  gazebo.launch.py  simple_display.launch.py
arctos_description/rviz/: default.rviz  moveit.rviz  mtc.rviz
arctos_description/urdf/: arctos.ros2_control.xacro  arctos.urdf.bak  arctos.urdf.xacro  arctos_arm.xacro  arctos_gripper.xacro  arctos_ros2_control.xacro.bak  joint_link.xacro  mobile_base_ros2_control.xacro  smallrobot.urdf.xacro.bak  smallrobot_gazebo.xacro.bak  smallrobot_macro.xacro  smallrobot_ros2_control.xacro.bak
arctos_description/world/: my_world.world
arctos_fndm_interface/: CMakeLists.txt  package.xml
arctos_hardware_interface/: CMakeLists.txt  MKS.md  READ.me  README.me  arctos_hardware_interface.xml  package.xml  robotarm_interface.xml
arctos_hardware_interface/config/: real_controllers.yaml.bak  robotarm_controllers.yaml
arctos_hardware_interface/include/arctos_hardware_interface/: ServoManager.hpp  ServoManager.hpp.bak  arctos_hardware_interface.hpp  can_driver.hpp  can_driver.hpp.bak  mks_servo_driver.hpp  motor.hpp.bak  motor_types.hpp  servo_can.hpp
arctos_hardware_interface/launch/: arctos_hardware.launch.py  controller.launch.py  gz.launch.py  mini.launch.py
arctos_hardware_interface/src/: ServoManager.cpp  ServoManager.cpp.bak  ServoManager_old_messy.cpp  arctos_can_driver_new.cpp.bak  arctos_hardware_interface.cpp  arctos_hardware_interface_old.cpp.bak  can_driver.cpp  can_driver.cpp.bak  mks_servo_driver.cpp  servo_can.cpp
arctos_interfaces/: CMakeLists.txt  package.xml
arctos_interfaces/msg/: PoseCommand.msg
arctos_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
arctos_moveit/config/: .setup_assistant  initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arctos_moveit/include/smallrobot_moveit/: move_program.hpp  test.hpp
arctos_moveit/launch/: moveit.launch.py
arctos_moveit/src/: move_program.cpp.bak
arctos_moveit_config/: .setup_assistant  CMakeLists.txt  arctos.urdf  package.xml
arctos_moveit_config/config/: arctos.ros2_control.xacro  arctos.srdf  arctos.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers.yaml.bak
arctos_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arctos_remote/: CMakeLists.txt  package.xml
arctos_remote/launch/: alexa.launch.py
arctos_remote/src/: task_server.cpp
logs/: gdb_attach.out  move_group_backtrace.txt  move_group_bt.txt
mtc_tutorial/: CMakeLists.txt  README.md  package.xml
mtc_tutorial/include/mtc_tutorial/: mtc_node.hpp
mtc_tutorial/launch/: pick_place_demo.launch.py
mtc_tutorial/src/: mtc_node.cpp  mtc_node_simple.cpp
smallrobot_firmware/: CMakeLists.txt  package.xml
