<package format="3">
  <name>mtc_tutorial</name>
  <version>0.0.1</version>
  <description>Pick and place tutorial using MoveIt Task Constructor</description>
  <maintainer email="giraftw2002@gmail.com">roach</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 